# zbase

./: .editorconfig  CMakeLists.txt  README.md  build_vs_2026.bat  distribute.sh  make.sh  make_debug.sh  release_version.sh
.github/workflows/: cmake.yml  cmake_check.yml  dist.yml
cmake/: macro.cmake  option.cmake
include/zbase/: GIT_VERSION  VERSION  zallocator.h  zarray.h  zbitset.h  zbuddy.h  zclock.h  zclock_diagnostic.h  zfile.h  zfile_mapping.h  zhash_map.h  zlist.h  zlist_ext.h  zmalloc.h  zmalloc_mt.h  zmem_color.h  zmem_pool.h  zpoint.h  zshm_boot.h  zshm_ptr.h  zstream.h  zsymbols.h  ztrace.h  zvector.h  zvector3.h
src/: zmalloc_preload.cpp
src/include/: zallocator.h  zarray.h  zbitset.h  zboot_loader.h  zbuddy.h  zclock.h  zclock_diagnostic.h  zcontain.h  zfile.h  zfile_mapping.h  zfilemapping.h  zforeach.h  zhash_map.h  zhazard_pointer.h  zlist.h  zlist_ext.h  zmalloc.h  zmalloc_mt.h  zmapping.h  zmem_color.h  zmem_pool.h  zmpmc.h  zobj_pool.h  zpoint.h  zpoint_capsule.h  zpoint_collision.h  zpoint_overlap_3d.h  zpool.h  zshm_boot.h  zshm_loader.h  zshm_ptr.h  zstream.h  zsymbols.h  ztrace.h  zvector.h  zvector3.h
tests/: fn_log.h  test_common.h  zprof.h
tests/base_sorted_insert_test/: base_sorted_insert_test.cpp
tests/base_stress_test/: base_stress.cpp  base_stress_test.cpp  list_stress.cpp
tests/base_test/: base_test.cpp  coverage_test.cpp  likely_test.cpp  static_vector.h  zbitset_test.cpp  zcontain_stress.cpp  zcontain_stress.h  zcontain_test.cpp  zcontain_test.h  zlist_stress.cpp  zlist_stress.h  zmalloc_test.cpp  zmalloc_test.h
tests/common/: test_common.h  zmalloc_preload.cpp  ztest.h
tests/common/include/fn-log/: fn_log.h
tests/common/include/zprof/: zprof.h
tests/empty_test/: empty_test.cpp
tests/foreach_test/: foreach_test.cpp
tests/malloc_mt_test/: malloc_mt_test.cpp  zmalloc_mt_test.cpp  zmalloc_mt_test.h
tests/malloc_slot_stress/: malloc_slot_stress.cpp
tests/malloc_slot_test/: malloc_slot_test.cpp
tests/malloc_test/: central_free_list.cpp  central_free_list.h  free_list.h  link_list.h  malloc_test.cpp  meta_allocator.h  page_heap.cpp  page_heap.h  page_map.h  page_map_cache.h  size_map.cpp  size_map.h  span.cpp  span.h  st_common.cpp  st_common.h  st_error_define.h  stmalloc.cpp  stmalloc.h  thread_cache.cpp  thread_cache.h  zmalloc_test.cpp  zmalloc_test.h
tests/malloc_test/tcmalloc/: central_free_list.cpp  central_free_list.h  free_list.h  link_list.h  meta_allocator.h  page_heap.h  page_map.h  page_map_cache.h  size_map.cpp  size_map.h  span.h  st_common.h  st_error_define.h  stmalloc.cpp  stmalloc.h  thread_cache.cpp  thread_cache.h
tests/mapping_test/: mapping_test.cpp
tests/preload_regression/: run_preload_cmds.sh
tests/preload_regression/dummy/: preload_dummy.cpp
tests/preload_regression/host/: preload_dlopen_host.cpp
tests/sys_platform_test/: sys_platform_test.cpp
tests/zbitset_test/: zbitset_test.cpp
tests/zboot_loader_test/: zboot_loader_test.cpp
tests/zbuddy_test/: zbuddy_test.cpp
tests/zclock_diagnostic_test/: zclock_diagnostic_test.cpp
tests/zclock_test/: zclock_test.cpp
tests/zforeach_adv_test/: zforeach_adv_test.cpp
tests/zforeach_base_test/: zforeach_base_test.cpp
tests/zforeach_mempool_test/: zforeach_mempool_test.cpp
tests/zhash_map_test/: zhash_map_test.cpp
tests/zhazard_pointer_test/: zhazard_pointer_test.cpp
tests/zlist_ext_test/: zlist_ext_test.cpp
tests/zmem_pool_test/: zmem_pool_test.cpp
tests/zmpmc/: zmpmc_test.cpp
tests/zpoint_capsule_test/: zpoint_capsule_test.cpp
tests/zpoint_collision_test/: zpoint_capsule_test.cpp
tests/zpoint_overlap_3d_test/: zpoint_overlap_3d_test.cpp
tests/zpoint_test/: zpoint_test.cpp
tests/zpool_test/: zpool_test.cpp
tests/zshm_boot_test/: zshm_boot_test.cpp
tests/zshm_loader_test/: zshm_loader_test.cpp
tests/zshm_ptr_test/: zshm_ptr_test.cpp
tests/zsingle_test/: other_test.cpp  zsingle_test.cpp
tests/zstream_test/: zstream_test.cpp
tests/zsymbols_test/: zsymbols_test.cpp
tests/ztrace_test/: ztrace_test.cpp
tests/zvector3_test/: zvector3_test.cpp
